// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HorizontalCarousel
    buttonLabel="foo"
    buttonLink="foo"
    className="foo"
    isReverseOrder={false}
    text="foo"
    title="foo"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="flex flex-column justify-center"
>
          <p
                    className="block-headline my3"
          >
                    foo
          </p>
          <div
                    className="markdown-block mb2"
                    dangerouslySetInnerHTML={
                              Object {
                                        "__html": "<p>foo</p>
                              ",
                                      }
                    }
          />
          <Button
                    childrenWrapperClassName=""
                    className=""
                    color="peach"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label="foo"
                    onClick={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    openInCurrentTab={false}
                    shadow={false}
                    to="foo"
                    type="button"
                    variant="primary-responsive"
          />
</div>,
        <div
          className="px3 flex flex-row"
>
          <div
                    className="flex my4 pr3"
          />
</div>,
      ],
      "className": "foo flex",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="block-headline my3"
>
              foo
</p>,
            <div
              className="markdown-block mb2"
              dangerouslySetInnerHTML={
                            Object {
                                          "__html": "<p>foo</p>
                            ",
                                        }
              }
/>,
            <Button
              childrenWrapperClassName=""
              className=""
              color="peach"
              disabled={false}
              fullWidth={false}
              hover="shadow"
              label="foo"
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              openInCurrentTab={false}
              shadow={false}
              to="foo"
              type="button"
              variant="primary-responsive"
/>,
          ],
          "className": "flex flex-column justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "className": "block-headline my3",
            },
            "ref": null,
            "rendered": "foo",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "markdown-block mb2",
              "dangerouslySetInnerHTML": Object {
                "__html": "<p>foo</p>
",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": null,
              "childrenWrapperClassName": "",
              "className": "",
              "color": "peach",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "foo",
              "onClick": [Function],
              "onMouseLeave": [Function],
              "onMouseOver": [Function],
              "openInCurrentTab": false,
              "shadow": false,
              "to": "foo",
              "type": "button",
              "variant": "primary-responsive",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="flex my4 pr3"
/>,
          "className": "px3 flex flex-row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": null,
            "className": "flex my4 pr3",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex flex-column justify-center"
>
            <p
                        className="block-headline my3"
            >
                        foo
            </p>
            <div
                        className="markdown-block mb2"
                        dangerouslySetInnerHTML={
                                    Object {
                                                "__html": "<p>foo</p>
                                    ",
                                              }
                        }
            />
            <Button
                        childrenWrapperClassName=""
                        className=""
                        color="peach"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label="foo"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to="foo"
                        type="button"
                        variant="primary-responsive"
            />
</div>,
          <div
            className="px3 flex flex-row"
>
            <div
                        className="flex my4 pr3"
            />
</div>,
        ],
        "className": "foo flex",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="block-headline my3"
>
                foo
</p>,
              <div
                className="markdown-block mb2"
                dangerouslySetInnerHTML={
                                Object {
                                                "__html": "<p>foo</p>
                                ",
                                              }
                }
/>,
              <Button
                childrenWrapperClassName=""
                className=""
                color="peach"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label="foo"
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to="foo"
                type="button"
                variant="primary-responsive"
/>,
            ],
            "className": "flex flex-column justify-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "block-headline my3",
              },
              "ref": null,
              "rendered": "foo",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "markdown-block mb2",
                "dangerouslySetInnerHTML": Object {
                  "__html": "<p>foo</p>
",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "childrenWrapperClassName": "",
                "className": "",
                "color": "peach",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "foo",
                "onClick": [Function],
                "onMouseLeave": [Function],
                "onMouseOver": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "foo",
                "type": "button",
                "variant": "primary-responsive",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="flex my4 pr3"
/>,
            "className": "px3 flex flex-row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": null,
              "className": "flex my4 pr3",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <HorizontalCarousel
    buttonLabel=""
    buttonLink=""
    className=""
    isReverseOrder={false}
    text=""
    title=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="flex flex-column justify-center"
>
          <p
                    className="block-headline my3"
          />
</div>,
        <div
          className="px3 flex flex-row"
>
          <div
                    className="flex my4 pr3"
          />
</div>,
      ],
      "className": "flex",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="block-headline my3"
/>,
            null,
            null,
          ],
          "className": "flex flex-column justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "block-headline my3",
            },
            "ref": null,
            "rendered": "",
            "type": "p",
          },
          null,
          null,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="flex my4 pr3"
/>,
          "className": "px3 flex flex-row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": null,
            "className": "flex my4 pr3",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex flex-column justify-center"
>
            <p
                        className="block-headline my3"
            />
</div>,
          <div
            className="px3 flex flex-row"
>
            <div
                        className="flex my4 pr3"
            />
</div>,
        ],
        "className": "flex",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="block-headline my3"
/>,
              null,
              null,
            ],
            "className": "flex flex-column justify-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "",
                "className": "block-headline my3",
              },
              "ref": null,
              "rendered": "",
              "type": "p",
            },
            null,
            null,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="flex my4 pr3"
/>,
            "className": "px3 flex flex-row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": null,
              "className": "flex my4 pr3",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
